# qsound

./: .gitignore  README.md
do-spaces-py/: app.py  requirements.txt  s3.py
qsound-blockend/: hardhat.config.js  helper-hardhat-config.js
qsound-blockend/contracts/: QSoundAlbum.sol  QSoundAlbumFactory.sol  QSoundPass.sol  QSoundSong.sol  QSoundSongFactory.sol  QSoundSongFactoryV2.sol  QSoundSongV2.sol
qsound-blockend/deploy/: 00-deploy-factory.js  01-deploy-pass.js
qsound-blockend/scripts/: createSong.js
qsound-server/: Cargo.toml
qsound-server/src/: main.rs
qsound-server/src/entities/: mod.rs  pyspaces.rs
qsound-server/src/handlers/: mod.rs  songs.rs  users.rs
qsound-server/src/models/: mod.rs  s3.rs  songs.rs  users.rs
qsound-server/src/routes/: mod.rs
qsound-server/src/utilities/: authentication.rs  aws.rs  aws_s3.rs  mod.rs  mongo.rs  s3.rs  songs.rs
qsound-subgraphs/: networks.json  package.json  schema.graphql  subgraph.yaml
qsound-subgraphs-latest/: networks.json  package.json  subgraph.yaml
qsound-subgraphs-latest/abis/: QSoundSongFactoryV2.json
qsound-subgraphs-latest/src/: q-sound-pass.ts  q-sound-song-factory-v-2.ts
qsound-subgraphs-latest/tests/: q-sound-pass-utils.ts  q-sound-pass.test.ts  q-sound-song-factory-v-2-utils.ts
qsound-subgraphs-new/: networks.json  package.json  schema.graphql  subgraph.yaml
qsound-subgraphs-new/abis/: Contract.json  (+1 more)
qsound-subgraphs-newer/: networks.json  package.json  schema.graphql  subgraph.yaml
qsound-ui/: package.json
qsound-ui-nonapp/: next.config.js  package.json
(+60 files in other folders)
