[package]
name = "qsound-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["compression", "tls"] }
reqwest = { version = "0.11.12" , features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
clap = "2.33.3"
mongodb = "2.3.1"
dotenv = "0.15.0"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
jsonwebtoken = "7.2"
chrono = "0.4"
regex = "1.3.7"
tokio-stream = "0.1.6"

